kubernetes/apps/network/ingress-nginx/proxy/config/adguard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ad01
  namespace: default
spec:
  type: ExternalName
  externalName: ${AD01_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${AD01_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-ad01
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host adguard01.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ad01
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Service
metadata:
  name: ad02
  namespace: default
spec:
  type: ExternalName
  externalName: ${AD02_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${AD02_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-ad02
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host adguard01.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ad02
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Service
metadata:
  name: ad03
  namespace: default
spec:
  type: ExternalName
  externalName: ${AD03_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${AD03_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-ad03
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host adguard03.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ad03
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
