kubernetes/apps/network/ingress-nginx/proxy/config/ansible.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ansible
  namespace: default
spec:
  type: ExternalName
  externalName: ${ANSIBLE_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${ANSIBLE_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-ansible
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: ansible.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ansible
                port:
                  number: 3000
    - host: semaphore.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ansible
                port:
                  number: 3000
  tls:
    - hosts:
        - ansible.${SECRET_DOMAIN_FBE}
        - semaphore.${SECRET_DOMAIN_FBE}
