kubernetes/apps/network/ingress-nginx/proxy/config/deluge.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: default
spec:
  type: ExternalName
  externalName: ${DELUGE_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Set this when the backend listens on a different URL
    nginx.ingress.kubernetes.io/upstream-vhost: ${DELUGE_ADDR}
    # Will this actually add the DNS record?
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-deluge
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host deluge.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: deluge
                port:
                  number: 8112
  tls:
    - hosts:
        - *host
