kubernetes/apps/network/ingress-nginx/proxy/config/forge.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forge
  namespace: default
spec:
  type: ExternalName
  externalName: ${FORGE_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${FORGE_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: forge
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: forge.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: forge
                port:
                  number: 3000
  tls:
    - hosts:
        - forge.${SECRET_DOMAIN_FBE}
---
