kubernetes/apps/network/ingress-nginx/proxy/config/fzbl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fzbl
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/upstream-vhost: ${AD01_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
  name: proxy-fzbl
  namespace: default
spec:
  ingressClassName: external
  rules:
    - host: &host ${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: fzbl
                port:
                  number: 80
  tls:
    - hosts:
        - *host
