kubernetes/apps/network/ingress-nginx/proxy/config/gitlab.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: default
spec:
  type: ExternalName
  externalName: ${GITLAB_ADDR}
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-registry
  namespace: default
spec:
  type: ExternalName
  externalName: ${GITLAB_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${GITLAB_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: gitlab
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: gitlab.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gitlab
                port:
                  number: 443
    - host: registry.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gitlab-registry
                port:
                  number: 5000
  tls:
    - hosts:
        - gitlab.${SECRET_DOMAIN_FBE}
        - registry.${SECRET_DOMAIN_FBE}
