kubernetes/apps/network/ingress-nginx/proxy/config/kvm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: workkvm
  namespace: default
spec:
  type: ExternalName
  externalName: ${WORKKVM_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: ${WORKKVM_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-workkvm
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host workkvm.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: workkvm
                port:
                  number: 443
  tls:
    - hosts:
        - *host
