kubernetes/apps/network/ingress-nginx/proxy/config/matrix.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: default
spec:
  type: ExternalName
  externalName: ${MATRIX_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${MATRIX_ADDR}
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN_FBS}"
  name: proxy-matrix
  namespace: default
spec:
  ingressClassName: external
  rules:
    - host: matrix.${SECRET_DOMAIN_FBS}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: matrix
                port:
                  number: 8448
  tls:
    - hosts:
        - matrix.${SECRET_DOMAIN_FBS}
---
