kubernetes/apps/network/ingress-nginx/proxy/config/sepffuzzball.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sepf
  namespace: default
spec:
  type: ExternalName
  externalName: 10.0.2.60
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: 10.0.2.60
    external-dns-sepf.alpha.kubernetes.io/target: "${SECRET_DOMAIN_SEPF}"
  name: proxy-sepf
  namespace: default
spec:
  ingressClassName: sepf
  rules:
    - host: &host ${SECRET_DOMAIN_SEPF}
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: sepf
                port:
                  number: 880
            path: /
  tls:
    - hosts:
        - *host
